--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "serve-favicon": "^2.4.5",
-    "sharp": "^0.18.4"
+    "sharp": "^0.18.4",
+    "webpack": "^3.8.1"
   },
   "devDependencies": {
     "grunt": "~1.0.1",
