--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "test": "karma start",
-    "start": "nodemon ./bin/www"
+    "test": "jest",
+    "karma-test": "karma start",
+    "start": "nodemon ./bin/www",
+    "bundle": "node_modules/.bin/webpack"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
-    "express": "^4.16.1",
+    "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "jade": "~1.11.0",
-    "marked": "~0.3.6",
-    "mongoose": "^4.12.0",
+    "jade": "^1.11.0",
+    "marked": "^0.3.6",
+    "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -26,6 +28,8 @@
     "webpack": "^3.8.1"
   },
   "devDependencies": {
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.2",
     "grunt": "~1.0.1",
     "grunt-contrib-clean": "~1.1.0",
     "grunt-contrib-jade": "~1.0.0",
@@ -36,10 +40,12 @@
     "grunt-karma": "~2.0.0",
     "jasmine-core": "~2.8.0",
     "jasmine-jquery": "~2.1.1",
+    "jest": "^21.2.1",
     "jshint-stylish": "~2.2.1",
     "karma": "~1.7.1",
     "karma-jasmine": "~1.1.0",
     "karma-phantomjs-launcher": "~1.0.4",
-    "karma-spec-reporter": "0.0.31"
+    "karma-spec-reporter": "0.0.31",
+    "react-test-renderer": "^16.0.0"
   }
 }
