--- a/package.json
+++ b/package.json
@@ -8,19 +8,26 @@
     "start": "nodemon ./bin/www",
     "bundle": "node_modules/.bin/webpack"
   },
+  "jest": {
+    "setupFiles": [
+      "./source/setup-jest.js"
+    ]
+  },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "bower": "^1.8.2",
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "jade": "^1.11.0",
+    "jquery": "^3.2.1",
     "marked": "^0.3.6",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "pug": "^2.0.0-rc.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "serve-favicon": "^2.4.5",
@@ -28,6 +35,10 @@
     "webpack": "^3.8.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
     "grunt": "~1.0.1",
@@ -46,6 +57,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-phantomjs-launcher": "~1.0.4",
     "karma-spec-reporter": "0.0.31",
-    "react-test-renderer": "^16.0.0"
+    "react-test-renderer": "^16.0.0",
+    "webpack-dev-server": "^2.9.3"
   }
 }
