--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "isit-site-tools-james": "^1.0.2",
     "jquery": "^3.2.1",
     "marked": "^0.3.6",
+    "material-ui": "^0.19.4",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
