--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "bundle": "node_modules/.bin/webpack"
   },
   "jest": {
+    "verbose": true,
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "ElfDebugEnzyme.js",
+      "tiny-pub-sub.js",
+      "temp-poly-fills.js"
+    ],
     "setupFiles": [
       "./source/setup-jest.js"
     ]
