added correct path to bundle

--- a/config/ElvenConfig.json
+++ b/config/ElvenConfig.json
@@ -3,6 +3,7 @@
         "base-dir": "/home/charlie/",
         "bootswatch": "cosmo",
         "most-recent-date": "2017-08-14",
+        "highlight": true,
         "site-dirs": [
             "Documents/AllSite",
             "Git/CloudNotes/Isit320"
