--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-phantomjs-launcher": "~1.0.4",
     "karma-spec-reporter": "0.0.31",
+    "prettier": "1.8.2",
     "react-test-renderer": "^16.0.0",
     "webpack-dev-server": "^2.9.3"
   }
