--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "isit-code-james": "^1.0.1",
     "isit-site-tools-james": "^1.0.3",
     "jquery": "^3.2.1",
-    "marked": "^0.3.6",
+    "marked": "^0.3.7",
     "material-ui": "^0.19.4",
-    "mongoose": "^4.13.5",
+    "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -43,17 +43,17 @@
     "react-dom": "^16.2.0",
     "serve-favicon": "^2.4.5",
     "sharp": "^0.18.4",
-    "webpack": "^3.8.1"
+    "webpack": "^3.10.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.2",
+    "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
-    "eslint": "^4.12.0",
+    "eslint": "^4.12.1",
     "eslint-plugin-react": "^7.5.1",
     "grunt": "~1.0.1",
     "grunt-contrib-clean": "~1.1.0",
@@ -68,10 +68,10 @@
     "jest": "^21.2.1",
     "jshint-stylish": "~2.2.1",
     "karma": "~1.7.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-jasmine": "^1.1.1",
     "karma-phantomjs-launcher": "~1.0.4",
     "karma-spec-reporter": "0.0.31",
     "react-test-renderer": "^16.2.0",
-    "webpack-dev-server": "^2.9.5"
+    "webpack-dev-server": "^2.9.6"
   }
 }
